# bots2d

./: CMakeLists.txt
include/bots2d/controllers/: ControllerComponent.h
include/bots2d/core/: Application.h
include/bots2d/physics/components/: LineDetector.h  PhysicsComponent.h
include/bots2d/renderer/: Camera.h
include/bots2d/renderer/components/: CircleComponent.h  HollowCircleComponent.h  QuadComponent.h  RectComponent.h  RenderableComponent.h
include/bots2d/scene/: Scene.h  SceneObject.h
src/: CMakeLists.txt
src/controllers/components/: CMicrocontroller.cpp  ControllerComponent.h  Microcontroller.cpp  microcontroller_c_bindings.c
src/core/: Application.cpp  Event.cpp
src/physics/: ContactListener.cpp  PhysicsWorld.cpp
src/physics/components/: Body2D.cpp  LineDetector.cpp  PhysicsComponent.h  RangeSensor.cpp
src/renderer/: AssetsHelper.cpp  Camera.cpp  ImGuiMenu.cpp  ImGuiOverlay.cpp  IndexBuffer.cpp  Renderer.cpp  Scalebar.cpp  Shader.cpp  SpriteAnimation.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
src/renderer/components/: QuadComponent.cpp  RectComponent.cpp
src/scene/: Scene.cpp  Scene.h  SceneMenu.cpp  SceneObject.cpp
src/transforms/components/: Transforms.h
